--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~42.0.1",
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-font": "~9.2.1",
+    "expo-leaflet": "^1.0.2",
     "expo-linking": "~2.3.1",
     "expo-location": "~12.1.2",
     "expo-sqlite": "~9.2.1",
@@ -29,7 +30,9 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2"
+    "react-native-webview": "11.6.2",
+    "expo-asset": "~8.3.3",
+    "expo-file-system": "~11.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
