--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^6.0.5",
     "@react-navigation/native-stack": "^6.2.3",
     "expo": "~42.0.1",
+    "expo-asset": "~8.3.3",
+    "expo-file-system": "~11.1.3",
     "expo-firebase-recaptcha": "^1.4.2",
     "expo-font": "~9.2.1",
     "expo-leaflet": "^1.0.2",
@@ -21,18 +23,19 @@
     "expo-status-bar": "~1.0.4",
     "fiction-expo-restart": "^1.1.0",
     "firebase": "8.2.3",
+    "polyline-encoded": "^0.0.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-measure": "^2.5.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-paper": "^4.9.2",
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2",
-    "expo-asset": "~8.3.3",
-    "expo-file-system": "~11.1.3"
+    "react-native-webview": "11.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
